# fisch

./: .editor_info  .gitignore  .gitmodules  2  README.md  build.bat  build_cmake.bat  build_editor.bat  build_game.bat  build_tex_viewer.bat  clean.bat  clean_build.bat  compile_commands.json  dap_path  gmon.out  pull.bat  push.bat  push_submodules.bat
.cache/clangd/index/: app.c.2E2B3C07499A7E49.idx  app.c.B66201E40AA58EF0.idx  app.h.77AA5C35F4FB9B49.idx  app.h.C385F6924F80EF28.idx  asset_io.c.4E0C6749C35B1720.idx  asset_io.h.6F30538636C11AF9.idx  assetm.c.4078FBF0BE5EA4D4.idx  assetm.h.F5B20E1DAF59A010.idx  bump_alloc.h.D285472044373D1F.idx  camera.c.2659AEEEA5359D54.idx  camera.h.FF50D562391E2746.idx  core_data.c.45196D5FEBE8BBD5.idx  core_data.h.95F9D21E754EDC2E.idx  cubemap.c.ACB8070ECEE5054F.idx  cubemap.h.440E6F9F74F70E40.idx  debug_draw.c.854A18E7BCBAC6F9.idx  debug_draw.h.007D87E34350C105.idx  debug_opengl.h.A955436895CA45F8.idx  debug_timer.c.49CCE65FB625AE42.idx  debug_timer.h.07450D4BEC9169EC.idx  dirent.h.0475029DAC116D10.idx  editor_save.c.25C93AFC6C67BB35.idx  editor_save.h.04B025809976AB27.idx  entity.h.1745CA96D33F69DB.idx  entity_table.c.8BF4E126D1C53A9D.idx  entity_table.h.E127CEFEA42F0746.idx  entity_tags.h.71D945D1489F05A4.idx  entity_template.c.990EE31BD0E682E3.idx  entity_template.h.30F458B8C02A3639.idx  event_sys.c.BFE781EC6E1A480D.idx  event_sys.h.293EE2DBE351864E.idx  file_io.c.671E1451C5F701A3.idx  file_io.h.04E1E28382CD9D92.idx  framebuffer.c.FC0924837F56ACAE.idx  framebuffer.h.A069E0923341FB6E.idx  games.h.837457AA6FCD0633.idx  gizmo.c.BFB87DB46ED79466.idx  gizmo.h.BA20484991FA5BE6.idx  glad.c.98BD0BCEFB4D16F1.idx  glad.h.778AC769EDC5B9CE.idx  (+103 more)
_assets/: empty.scene  fps_01.scene  phys_test.scene  power_lever.save_data  scripts.save_data  test.scene  test_02.scene  test_03.scene  test_fps.scene  test_fps.terrain  turn_based.scene
_assets/audio/: gun_01_01.aup3-shm  gun_01_01.aup3-wal  links.txt
_assets/icons/: links.txt
_assets/meshes/: female_char_01_01.fbx  mooh_armour01.fbx  mooh_body01.fbx  mooh_weapon01.fbx  shotgun.fbx
_assets/meshes/icons/: pause_icon.fbx  play_icon.fbx
_assets/meshes/puzzle_game/: #01_puzzle_game_meshes.blend  #01_puzzle_game_meshes.blend1  door_01.fbx  plant_01.fbx  power_lever_01.fbx  power_lever_02.fbx
_assets/scenes/: empty.scene  template01.scene  test.scene  turn_based.scene
_assets/scenes/puzzle_game/: lvl_01.scene
_assets/shaders/: deferred.frag  deferred_unlit.frag  learn_opengl_pbr.frag  lighting.frag  pbr.frag  pbr_forward.frag  pbr_forward.vert  pbr_forward_02.frag  post_fx.frag
_assets/shaders/cubemap/: cube_map.frag
_assets/shaders/mui/: circle.frag  mui.vert  rounded.frag
_assets/shaders/post_fx/: fxFXAA.frag
_assets/shaders/text/: text02.frag  text02.vert
_assets/structures/: fps_player.struct  paladin.struct  power_lever.struct
_assets/textures/jetbrains_mono_nl/: jetbrains_mono_nl.afpub  jetbrains_mono_nl_02.afpub
_bin/: .editor_info  editor.rdbg  editor_vs.rdbg  gmon.out  renderdoc_editor_01.cap  renderdoc_game_01.cap  tmp.txt
_bin/Debug/: editor.ilk  flecs.ilk  game.ilk
_build/: compile_options.cmake  fisch.cmake
_build/bovengine/: CMakeLists.txt
_build/editor/: CMakeLists.txt  editor.rc
_build/fisch/: CMakeLists.txt
_build/fisch_editor/: CMakeLists.txt
_build/fisch_external/: CMakeLists.txt
_build/game/: CMakeLists.txt
_build/games/: games.cmake  puzzle_game.cmake  sandbox.cmake  template.cmake  test.cmake  turn_based.cmake
_build/games/sandbox/: CMakeLists.txt
_build/games/test/: CMakeLists.txt
_build/tex_viewer/: CMakeLists.txt  tex_viewer.rc
_external/nuklear/: nuklear_glfw_gl3.h
_external/ufbx/: ufbx.h
_libs/win64/: #_links.txt
_libs/win64/Debug/: bovengine.lib  bovengine_external.lib  fisch.lib  fisch_editor.lib  fisch_editor_game_test.lib  fisch_external.lib  fisch_game_test.lib  flecs.exp  flecs.lib
_libs/win64/RelWithDebInfo/: fisch.lib  fisch_game_test.lib
_libs/win64/Release/: bovengine.lib  fisch.lib  fisch_external.lib  fisch_game_test.lib  flecs_static.lib
apps/editor/: app.c  app.h  editor_save.c  editor_save.h  gizmo.c  gizmo.h  operation.c  operation.h  terrain_edit.c
apps/editor/gui/: gui.c  gui.h  gui_assetm.c  gui_core_data.c  gui_entity_hierarchy.c  gui_light_hierarchy.c  gui_operations.c  gui_properties.c  gui_struct_browser.c  gui_style.c  gui_style.h  gui_template_browser.c  gui_tools.c  gui_top_bar.c
apps/game/: app.c  app.h  main.cpp
apps/tex_viewer/: app.c  app.h
games/: games.h
games/puzzle_game/: design.md  entity_table.c  entity_table.h  entity_tags.h  material_table.c  material_table.h  puzzle_game.c  puzzle_game.h  script_fps.c  script_power_lever.c  scripts.c  scripts.h  shader_table.c
games/sandbox/: entity_table.c  entity_table.h  material_table.c  material_table.h  sandbox.c  test_comp.c  test_comp.h
games/template/: entity_table.c  entity_table.h  entity_tags.h  material_table.c  material_table.h  scripts.c  scripts.h  shader_table.c  template.c  template.h
games/test/: components.c  components.h  entity_table.c  entity_table.h  entity_tags.h  material_table.c  material_table.h  script_enemy.c  script_fps.c  script_player.c  scripts.c  scripts.h  shader_table.c  shader_table.h  test.c  test.h  test_comp.c  test_comp.h  test_comp_old.h
games/turn_based/: controller.c  controller.h  entity_table.c  entity_table.h  entity_tags.h  script_controller.c  script_tile.c  scripts.c  scripts.h  shader_table.h  turn_based.c  turn_based.h
scripts/: build_cmake.bat  build_editor.bat  build_game.bat  clean_build.bat
src/: gmon.out
src/core/: camera.c  camera.h  core_data.c  core_data.h  event_sys.c  event_sys.h  program.c  program.h  state.c  terrain.c  terrain.h  threadm.c  window.c  window.h
src/core/audio/: audio.c  audio.h
src/core/debug/: debug_draw.c  debug_draw.h  debug_opengl.h  debug_timer.c  debug_timer.h
src/core/ecs/: ecs.c  ecs.h  (+2 more)
src/global/: global.h
src/mui/: mui.c  mui.h
src/phys/: phys_world.c
src/text/: text_draw.c  text_draw.h
src/text2/: text.c  text_inc.h
(+59 files in other folders)
